new change page

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
 
   <!-- 🌍 SEO Meta -->
-  <title>Palani — Full-Stack Developer Portfolio</title>
-  <meta name="description" content="Palani — Full-stack developer specializing in Angular, Node.js & MySQL. Passionate about modern UI & scalable web apps.">
+  <title>Palani Muurgan A — Senior Software Engineer ( Full Stack ) Portfolio</title>
+  <meta name="description" content="Palani Muurgan A — Senior Software Engineer ( Full Stack ) specializing in Angular, Node.js & MySQL. Passionate about modern UI & scalable web apps.">
   <meta name="keywords" content="Palani, Portfolio, Angular Developer, Node.js, MySQL, Full Stack">
   <meta name="author" content="Palani">
 
@@ -111,15 +111,17 @@
 
 <div class="hero">
   <img src="https://via.placeholder.com/150">
-  <h1>Hello 👋 I'm <span style="color:#38bdf8">Palani</span></h1>
-  <p>Full-Stack Developer — Angular | Node.js | MySQL</p>
+  <h1>Hello 👋 I'm <span style="color:#38bdf8">Palani Murugan A</span></h1>
+  <p>Senior Software Engineer ( Full Stack ) — Angular | Node.js | MySQL</p>
 </div>
 
 <div class="container">
 
 <section>
   <h2>About Me</h2>
-  <p>I build fast, modern & secure web applications. Focused on UI, performance & user experience.</p>
+  <p>Experienced Software Engineer with a strong background in the Information Technology industry, specializing in dynamic websites, product development, and service-based applications. Proficient in secure coding practices and well-versed in programming and scripting languages, data structures and algorithms, version control systems Git and database management MySQL.
+<br>
+Skilled in modern JavaScript technologies including JavaScript (JS), TypeScript (TS), jQuery, and Electron. Hands-on experience with popular frameworks and platforms such as Angular, Node.js, and Laravel. Adept at delivering high-quality, scalable, and maintainable software solutions in fast-paced environments.</p>
 </section>
 
 <section>
@@ -144,19 +146,36 @@
   <h2>Experience</h2>
   <div class="timeline">
     <div>
-      <b>Software Developer</b><br>
-      Built full-stack applications & APIs
+      <b>Senior Software Engineer</b><br>
+      MegSoft Business Solutions Private Limited - Madurai<br>
+      May 2023 - Present
     </div>
     <div>
-      <b>Freelance Developer</b><br>
-      Delivered custom business web apps
+      <b>Application Developer</b><br>
+      Chrono Infotech - Madurai<br>
+      Mar 2022 - Mar 2023
+    </div>
+    <div>
+      <b>Internship Trainee</b><br>
+      Harisan Technologies - Madurai<br>
+      Nov 2021 - Mar 2022
+    </div>
+     <div>
+      <b>Sales Executive</b><br>
+      Bajaj Finserv - Madurai<br>
+      Mar 2021 - Sep 2021
+    </div>
+  <div>
+      <b>Customer Care Executive</b><br>
+      MADURAI FRIENDS TRACK CALL TAXI - Madurai<br>
+      Jun 2015 - Mar 2021
     </div>
   </div>
 </section>
 
 <section>
   <h2>Contact</h2>
-  <p>Email: your@email.com</p>
+  <p>Email: iampalanimurugan@gmail.com</p>
 </section>
 
 </div>
