--- a/index.html
+++ b/index.html
@@ -140,8 +140,8 @@
 <nav>
   <div><b>Palani Murugan A 👨‍💻</b></div>
   <div class="social">
-    <a href="https://www.linkedin.com/in/palani-murugan-a-9aa7792a0/details/skills/">LinkedIn</a>
-    <a href="https://github.com/iampalanimurugan-cpu">GitHub</a>
+    <a href="https://www.linkedin.com/in/palani-murugan-a-9aa7792a0/details/skills/" target="_blank">LinkedIn</a>
+    <a href="https://github.com/iampalanimurugan-cpu" target="_blank">GitHub</a>
   </div>
 </nav>
 
