linked in added and git also

--- a/index.html
+++ b/index.html
@@ -117,9 +117,16 @@ body {
             <a href="mailto:iampalanimurugan@gmail.com">iampalanimurugan@gmail.com</a>
             <span>|</span>
             <a href="tel:+918220966518">+91 8220966518</a>
+             <span>|</span>
+             <a href="https://www.linkedin.com/in/palani-murugan-a-9aa7792a0/" target="_blank">LinkedIn</a>
+              <span>|</span>
+               <a href="https://github.com/iampalanimurugan-cpu" target="_blank">GitHub</a>
         </div>
     </div>
 </header>
+
+ 
+
 
 <section class="section">
     <div class="container">
